2008-08-21  Abel Cheung  <abelcheung@gmail.com>

	* class.guido.inc.php (execute):
	- Changing zoom factor to account for Guido server default DPI value.

	* class.abc.inc.php:
	- (abcRender) Use different DPI value since abcm2ps seems to use
	  quite large value.
	- (convertimg) Rewrite, old logic don't work anymore,
	  due to change in ImageMagick / abcm2ps behaviour.

2008-08-17  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- (get_upload_dir) New func.
	- (scorerender_get_options) Better guess of Windows program path.

2008-08-05  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- More hintful image title.

2007-08-08  Abel Cheung  <abelcheung@gmail.com>

	* class.*.php:
	- More consistent function naming.
	- Removal of $this->_uniqueID, use $this->get_notation_name() instead.
	- Also check if programs are usable by executing a program and
	  reading its output.
	* wp-scorerender.php:
	- Change cache file name, append "sr-<notation>-" to diffrentiate.
	- load_plugin_textdomain() also check translation in WP lang dir.

2007-06-15  Abel Cheung  <abelcheung@gmail.com>

	* class.guido.inc.php (getInputFileContent):
	- Removed, use the method in parent class instead.

	* wp-scorerender.php:
	- No more enables rendering for each notation or post/comment
	separately; rendering for posts is always enabled, and rendering for
	comment is unified in one single option.

2007-06-13  Abel Cheung  <abelcheung@gmail.com>

	* class.scorerender.inc.php (getInputFileContent):
	- Implement base method but allows other subclasses to override it.

2007-06-12  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, class.*.php:
	More complete documentation.

2007-06-10  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: PHP4 compatibility fix.

2007-06-10  Abel Cheung  <abelcheung@gmail.com>

	* showcode.php, wp-scorerender.php:
	- Load text domain properly.

2007-06-08  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: